# asm

./: Cargo.toml  README.md
.github/workflows/: build.yml  release-mac-linux.yaml  release.yml  rust.yml
src/: aws_sm.rs  lib.rs  main.rs  secret.rs
