[package]
name = "asm"
version = "0.1.2"
edition = "2021"
authors = ['Mike Lloyd']
description = "A CLI tool for getting secrets from AWS Secrets Manager"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin14-clang"
ar = "x86_64-apple-darwin14-ar"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.5", features = ["derive"] }
colored_json = "2.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tabled = "0.6.1"
