[package]
name = "asm"
version = "0.1.2"
edition = "2021"
authors = ['Mike Lloyd']
description = "A CLI tool for getting secrets from AWS Secrets Manager"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.5", features = ["derive"] }
colored_json = "3.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tabled = "0.7.0"
